Motores de plantillas + websockets

--- a/Ejercicios/10_websockets/package.json
+++ b/Ejercicios/10_websockets/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "express",
+  "name": "10_websockets",
   "version": "1.0.0",
-  "description": "server en express",
+  "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "start": "node ./src/app.js",
+    "start": "node .src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "mello",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "socket.io": "^4.5.4",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.4"
   }
 }
