--- a/Desafios/express/package.json
+++ b/Desafios/express/package.json
@@ -4,14 +4,16 @@
   "description": "server en express",
   "main": "./src/app.js",
   "scripts": {
-    "start": "node ./src/app.js",
+    "start": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mello",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "mongoose": "^6.9.0",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   },
