--- a/Challenges/express/package.json
+++ b/Challenges/express/package.json
@@ -10,10 +10,12 @@
   "author": "mello",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "mongoose": "^6.9.0",
+    "mongoose-paginate-v2": "^1.7.1",
     "socket.io": "^4.5.4",
     "uuid": "^9.0.0"
   },
