--- a/Challenges/express/package.json
+++ b/Challenges/express/package.json
@@ -4,7 +4,7 @@
   "description": "server en express",
   "main": "./src/app.js",
   "scripts": {
-    "start": "nodemon ./src/app.js",
+    "start": "nodemon ./src/app.js MONGO",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mello",
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
