--- a/Exercises/30_mailing_SMS/package.json
+++ b/Exercises/30_mailing_SMS/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "twilio": "^4.10.0"
   }
 }
