--- a/Challenges/express/package.json
+++ b/Challenges/express/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@handlebars/allow-prototype-access": "^1.0.5",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
