--- a/Challenges/express/package.json
+++ b/Challenges/express/package.json
@@ -5,7 +5,7 @@
   "main": "./src/app.js",
   "scripts": {
     "start": "nodemon ./src/app.js MONGO",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/factory.test.js"
   },
   "author": "mello",
   "license": "ISC",
@@ -37,6 +37,9 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
